--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pydantic>=2.6",
     "sqlalchemy>=2.0",
     "apprise>=1.7",
+    "fastapi>=0.111",
+    "uvicorn>=0.29",
 ]
 
 [project.scripts]
